--- a/LogicaProg/jogoAdivinhaMais.html
+++ b/LogicaProg/jogoAdivinhaMais.html
@@ -13,16 +13,20 @@
     <button>Compare om o meu segredo</button>
 
     <script>
-        var segredo = 5
+        var segredo = Math.round(Math.random()) * 10;
 
         var input = document.querySelector("input");
+        input.focus();
 
         function verifica() {
-            if (input.value == 5) {
+            if (input.value == segredo) {
                 alert("Você acertou!");
             } else {
                 alert("Você errou!")
             }
+
+            input.value = "";
+            input.focus();
         }
 
         var button = document.querySelector("button");
